<resources>
    <string name="app_name">SamsApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="sched">Получить расписание</string>
    <string name="menu_home">Главная</string>
    <string name="menu_about">О лицее</string>
    <string name="menu_schedule">Расписание</string>
    <string name="menu_hidden_groups">Группы</string>
    <string name="menu_title">Вход/выход</string>
    <string name="menu_in">Войти</string>
    <string name="menu_out">Выйти</string>
    <string name="menu_register">Авторизация</string>
    <string name="guest">Гость</string>
    <string name="prompt_nick">Nickname</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">    Sign in    </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string-array name="groups">
        <item>7A</item>
        <item>7B</item>
        <item>8A</item>
        <item>8B</item>
        <item>9A</item>
        <item>9B</item>
        <item>10A</item>
        <item>10B</item>
        <item>11A</item>
        <item>11B</item>
    </string-array>
    <string-array name="days">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Четверг</item>
        <item>Пятница</item>
    </string-array>

</resources>