<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:id="@+id/first_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_hidden_groups"/>
    </group>
    <item android:id="@+id/second_group"
        android:title="@string/menu_title">
        <menu>
            <item
                android:id="@+id/nav_in"
                android:icon="@drawable/ic_menu_manage"
                app:actionViewClass="android.widget.TextView"
                android:title="@string/menu_in" />
            <item
                android:id="@+id/nav_out"
                android:icon="@drawable/ic_menu_manage"
                app:actionViewClass="android.widget.TextView"
                android:title="@string/menu_out"/>

        </menu>
    </item>

</menu>