<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.samsapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.samsapp.ui.about.About"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.example.samsapp.ui.schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.samsapp.ui.groups.GroupsFragment"
        android:label="@string/menu_hidden_groups"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/nav_in"
        android:name="com.example.samsapp.ui.login.LoginFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_groups" >
        <action
            android:id="@+id/action_nav_in_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>